# flion

./: Cargo.toml  README.md  build.rs  run.ps1  rust-toolchain.toml
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: CMakeLists.txt  main.rs
crates/cli/src/: CMakeLists.txt  main.rs
crates/flion/: Cargo.toml
crates/flion-build/: Cargo.toml
crates/flion-build/src/: lib.rs
crates/flion/src/: codec.rs  compositor.rs  engine.rs  keyboard.rs  keymap.rs  lib.rs  mouse_cursor.rs  platform_views.rs  plugins_shim.rs  resize_controller.rs  settings.rs  task_runner.rs  text_input.rs  views.rs  window.rs
crates/flutter-embedder/: build.rs  justfile
crates/flutter-embedder/src/: bindings.rs  lib.rs
crates/plugins-compat/src/: lib.rs
example/: Cargo.toml  build.rs  pubspec.yaml
example/lib/: main.dart
example/src/: main.rs
flion/: Cargo.toml
flion-build/src/: lib.rs
flion/src/: compositor.rs  egl.rs  egl_manager.rs  engine.rs  keyboard.rs  lib.rs  mouse_cursor.rs  platform_views.rs  plugins_shim.rs  settings.rs  standard_method_channel.rs  task_runner.rs
flutter-codec/: Cargo.toml
flutter-codec/src/: lib.rs
flutter-embedder/: Cargo.toml  build.rs
plugins-compat/: Cargo.toml
plugins-compat/src/: lib.rs
src/: compositor.rs  egl_manager.rs  engine.rs  error_utils.rs  keyboard.rs  lib.rs  main.rs  mouse_cursor.rs  render_thread.rs  resize_controller.rs  settings.rs  standard_method_channel.rs  task_runner.rs  text_input.rs
src/compositor/: renderer.rs  shaders.hlsl
