[package]
name = "fluyt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["flutter-embedder"]

[dependencies]
color-eyre = "0.6"
flutter-embedder = { path = "flutter-embedder" }
gl = "0.14"
khronos-egl = { version = "6.0", features = ["static", "no-pkg-config"] }
raw-window-handle = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
winit = "0.29"

[dependencies.windows]
version = "0.52"
features = [
    "Foundation_Numerics",
    "Graphics_DirectX",
    "System",
    "UI_Composition",
    "UI_Composition_Core",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
dunce = "1.0"
