[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
flion = { path = "../crates/flion" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
windows-numerics = "0.1.1"

[dependencies.windows]
version = "0.60"
features = ["UI_Composition"]

[build-dependencies]
flion-build = { path = "../crates/flion-build" }
