[package]
name = "flion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.8.0"
byteorder = "1.5.0"
ctor = "0.4.0"
eyre = "0.6"
flutter-embedder = { path = "../flutter-embedder" }
gl = "0.14"
khronos-egl = { version = "6.0", features = ["static", "no-pkg-config"] }
linkme = "0.3.32"
parking_lot = "0.12.3"
plugins-compat = { path = "../plugins-compat" }
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = "0.2.2"
tracing = "0.1"
windows-numerics = "0.1.1"
winit = "0.29"

[dependencies.windows]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Touch",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
dunce = "1.0"
